[DHUB-279] WIP