@@ -2,7 +2,6 @@ package org.dotwebstack.framework.core.helpers;
 
 import static org.dotwebstack.framework.core.helpers.ObjectHelper.castToMap;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 
 public class MapHelper {
@@ -13,6 +12,6 @@ public class MapHelper {
     if (arguments.containsKey(name) && arguments.get(name) instanceof Map) {
       return castToMap(arguments.get(name));
     }
-    return ImmutableMap.of();
+    return Map.of();
   }
 }
